# Dienstplaner

./: .eslintcache  biome.json  bun.lockb  eslint.config.js  justfile  package.json  svelte.config.js  vite.config.js
src/: api.ts  store.svelte.ts  utils.ts
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/migrations/2024-10-12-194633_employees/: up.sql
src-tauri/migrations/2024-10-12-194901_workdays/: down.sql  up.sql
src-tauri/migrations/2024-10-13-144651_settings/: up.sql
src-tauri/src/: color.rs  db.rs  employee.rs  err.rs  lib.rs  main.rs  schema.rs  settings.rs  workdays.rs
src/lib/: utils.ts
src/lib/components/: editDialog.svelte  employees.svelte  settings.svelte  time.svelte
src/lib/components/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte
src/lib/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-content.svelte  alert-dialog-description.svelte  alert-dialog-header.svelte  alert-dialog-overlay.svelte  alert-dialog-title.svelte
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/components/ui/card/: card-description.svelte  card-title.svelte  card.svelte
src/lib/components/ui/checkbox/: checkbox.svelte
src/lib/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-title.svelte  index.ts
src/lib/components/ui/input/: input.svelte
src/routes/: +layout.svelte  +page.svelte  editDialog.svelte  employees.svelte  settings.svelte  time.svelte
(+38 files in other folders)
