[package]
name = "dienstplaner"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dienstplaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4.3"
dirs = "5.0.1"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
diesel = { version = "2.2.4", features = [
	"sqlite",
	"returning_clauses_for_sqlite_3_35",
] }
lazy_static = "1.5.0"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.9.2", features = ["tokio"], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.58.0"


[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "unwind"
strip = true
